--- a/Psw.FlowExpressions/Psw.FlowExpressions.csproj
+++ b/Psw.FlowExpressions/Psw.FlowExpressions.csproj
@@ -4,10 +4,22 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <Title>Flow Expressions</Title>
+    <Authors>Andre Pretorius</Authors>
+    <Company>Promic Software</Company>
+    <Description>Construct, ready to run,  Parsers of any complexity using a declarative fluent syntax in C#.</Description>
+    <Copyright>2023 Promic Software</Copyright>
+    <PackageProjectUrl>https://github.com/promicsw/flow-expressions</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/promicsw/flow-expressions</RepositoryUrl>
+    <PackageTags>parser</PackageTags>
+    <PackageReleaseNotes>Initial release</PackageReleaseNotes>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Scanners\Psw.Scanners\Psw.Scanners.csproj" />
+    <PackageReference Include="Psw.Scanners" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
