--- a/Psw.FlowExpressions/Psw.FlowExpressions.csproj
+++ b/Psw.FlowExpressions/Psw.FlowExpressions.csproj
@@ -12,14 +12,23 @@
     <Copyright>2023 Promic Software</Copyright>
     <PackageProjectUrl>https://github.com/promicsw/flow-expressions</PackageProjectUrl>
     <RepositoryUrl>https://github.com/promicsw/flow-expressions</RepositoryUrl>
-    <PackageTags>parser;c#;</PackageTags>
-    <PackageReleaseNotes>Initial release</PackageReleaseNotes>
+    <PackageTags>parser;flow-logic;c#;</PackageTags>
+    <PackageReleaseNotes>Initial release.</PackageReleaseNotes>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <PackageReadmeFile>Nuget.md</PackageReadmeFile>
+    <PackageOutputPath>d:\PromicSW_GitHub\LocalNuget\</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="FexParser.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\Nuget\Nuget.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
